# Yumly

./: .env  .gitignore  LICENSE  Makefile  README.MD  Yumly.nimble  example.yumly  example2.yumly  example3.yuy  pyproject.toml  setup.py  yumly_cli.nim
.github/workflows/: ci.yml  python-ci.yml
examples/: example.yumly  example2.yumly  example3.yums
lib/python/yumly/: __init__.py  yumly.py  yumly_error.py  yumly_parser.py
src/: Yumly.nim  parser.nim  yumly_cli.nim  yumly_core.nim  yumly_file.nim
src/Yumly/: error_messages.nim  evaluator.nim  libyumly.nim  parser.nim  resolver.nim  semantic.nim  submodule.nim  tokenizer.nim
src/Yumly/additional/: include_loader.nim  validate.nim  validate_includes.nim
src/Yumly/api/: nim_api.nim  python_api.nim
src/Yumly/serializers/: encoder.nim  parser_python.nim  parser_yumly.nim  parser_yumyumy.nim
src/Yumly/types/: ast.nim  nodes.nim  token.nim  type_hints.nim  values_defs.nim
src/additional/: validate.nim
src/results/: parser_python.nim  parser_yumly.nim  parser_yumly_struct.nim
src/types/: ast.nim  token.nim
tests/: run_tests.py  test.nim  test_api_ergonomics.nim  test_ast.nim  test_encoder.nim  test_write.nim
tests/components/: test_encoder.nim  test_tokenizer.nim
tests/files/invalid/: env_only_with_dollar.yumly  unclosed_comment.yumly  unclosed_string.yumly
tests/files/invalid/brace/: missing_brace_final.yumly  missing_brace_start.yumly
tests/files/invalid/lists/: heterogenius_list.yumly  list_with_no_type.yumly  malformed_list.yumly  no_comma_list.yumly
tests/files/invalid/semantic/: circular_include.yumly
tests/files/invalid/unexpected/: unexpected_token.yumly  unexpected_token_root.yumly
tests/files/valid/full/: base_shared.yumly  deployment_plan.yuy  full.env  service_stack.yumly
tests/files/valid/includes/: component.yuy  main.yumly
tests/projects/cafeMenu/: cafe.nim  config.yumly  menu.yuy
tests/projects/getWaifu/: waifuu.nim
tests/projects/tasks/: tasks.py
tests/python/: test_yumly.py  yumly_test.py
utils/: change_version.nim  yumly_cli.nim
yumly-vscode/: README.md  language-configuration.json  package-lock.json  package.json
yumly-vscode/syntaxes/: yumly.tmLanguage.json
(+10 files in other folders)
