[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yumly"
version = "0.3.0"
description = "Yumly is a configuration file format designed to be a mix of YAML and JSON with type safety and a rigorous structure."
readme = "README.md"
authors = [{ name = "Yumene", email = " yumene@yume.dev.br " }]
license = { file = "LICENSE" }
requires-python = ">=3.8"

[tool.setuptools]
packages = ["yumly"]
package-dir = {"" = "lib/python"}

[tool.setuptools.package-data]
yumly = ["libyumly.so", "libyumly.pyd"]

[project.urls]
"Homepage" = "https://github.com/Creeper011/Yumly"
"Bug Tracker" = "https://github.com/Creeper011/Yumly/issues"
